--- a/HTML/NFTMarkerTest.html
+++ b/HTML/NFTMarkerTest.html
@@ -36,7 +36,7 @@
     <!-- we use cors proxy to avoid cross-origin problems -->
     <a-nft
       type="nft"
-      url="https://arjs-cors-proxy.herokuapp.com/https://raw.github.com/sengkhunDesign/AR/blob/testing/NFT-image/eye"
+      url="https://arjs-cors-proxy.herokuapp.com/https://raw.githack.com/sengkhunDesign/AR/testing/NFT-image/eye"
       smooth="true"
       smoothCount="10"
       smoothThreshold="5"
